--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <i>Cases of dog attacks have gone up by more than a third in the UK.</i>
     <br><br>
     <div class="centre">
-        <img src="images/first.jpeg" width="800">
+        <img src="images/first.jpeg">
         <br>
         <i class="small">Nearly 3,500 dogs were seized in 2022 across 33 force areas. Most are because animals are deemed "out of control"</i>
     </div>
@@ -78,7 +78,7 @@
     <br><br>
     <p>There are specific legal measures to discourage dog owners from disobeying rules; sentencing owners who let their dog be out of control, or warranting a disqualification order that prevents them from keeping their dogs for a certain period. And charging owners, a £2,500 fine if they breach a community protection notice, which is designed to stop anti-social behavior. </p>
     <br><br>
-    <p>However, there is still the burning question, why have dog attacks increased in the past five years? According to the Freedom of Information Act, FOI, obtained by the BBC, the number of dog owners during the pandemic soared to approximately 10%. Yet, mentioned in an article for The Guardian, John Tulloch, a vet, and epidemiologist at the University of Liverpool, says that the rise in dog attack cases does not correlate with the rise in the number of dog owners during the pandemic. He explains that it was prevalent, before the lockdown, however, what he was surprised by was the increase in dog bites among adults. There is still uncertainty as to why the numbers have gone up, but there are different theories.  </p>
+    <p>However, there is still the burning question, why have dog attacks increased in the past five years? According to the Freedom of Information Act, FOI, obtained by the BBC, the number of dog owners during the pandemic soared to approximately 10%. There is still uncertainty as to why the numbers have gone up, but there are different theories.  </p>
     <br><br>
     <p>One of the potential reasons is, dogs may have lost their ability to socialize with people and other pets, due to everyone being at home more even after the lockdown, causing them to lose their safe space to retreat to, and therefore leading to an increase in anxiety and stress. The Dogs Trust Annual Report showed that 1 in 10 dogs in the UK developed new signs of separation-related behaviour during the lockdown. </p>
     <br><br>
@@ -87,7 +87,7 @@
     <p>An additional aspect to consider is the sourcing of dogs from the internet. It has been proven by Defra as too easy, and potentially harmful, as it can reduce the understanding of the required commitment to own a dog. Their research shows multiple websites where one can easily purchase a dog, such as Gumtree and Preloved. People are probably getting their puppies from unknown backgrounds. Unbeknownst to the new owners, their puppy could be unsocialized, and have insufficient care. </p>
     <br><br>
     <div class="centre">
-        <img src="images/second.jpeg" width="800">
+        <img src="images/second.jpeg">
         <br>
         <i class="small">During 2021/22, Royal Mail reported 1,673 dog attacks on its staff, resulting in severe injuries, including permanent disabilities. </i>   
     </div>
@@ -113,7 +113,7 @@
     <i>In the 12 months leading up to March 2023, the capital’s rent has surged up to 4.8%, surpassing England’s average, and making it the highest increase rate in 11 years.</i>
     <br><br> 
     <div class="centre">
-        <img src="images/third.jpeg" width="800">
+        <img src="images/third.jpeg">
         <br>
         <i class="small">Single people now spend 35% of their income on rent, as earnings rose just 6% in 12 months </i>
     </div>
@@ -138,7 +138,7 @@
     <p>        Ayrton Brooke, 21, studying at Staffordshire University in London, accounts for getting his first flat last year. He said he was aware of the potential challenges he would face, finding private property as a student, but was not expecting to be in search of a flat for almost three months. He had to resort to bidding for several flats. He said, “There were about 50 other viewers for one singular flat, so we went on a minimum of 15 views in all of East London.” He added, “I'd see the documentation that would say the flat was previously £1,200, maybe from like last year, and then they’d advertise on Zoopla as £1,500, but if you click on the document that was linked off, then it would be a lot cheaper, it isn’t fair for everything to go up, because they know the demand is high, the person that can offer the most money, they are obviously going to take.” </p>      
     <br><br>
     <div class="centre">
-        <img src="images/fifth.jpeg" width="800">
+        <img src="images/fifth.jpeg">
         <br>
         <i class="small">Messages between Ayrton and his landlord. </i>   
     </div>
@@ -147,7 +147,7 @@
     <p>Ayrton Brooke managed to rent a small flat with his partner for £1,100, bills included, He said, “We had a few arrangements with the Landlord to solve the mold issue – and we also talked to the neighbors, saying that they had the same issue.” He added, “It was like a house, which was split into small flats, like apartments, which was quite dodgy as well.” He further explained that the electric meter was only accessible on his side of the house, so the neighbors would have to ring him to access electricity. He also said, the Landlord offered a dehumidifier, which did not help with the mold issue. When asked who was to blame for the mould problem, Ayrton said, “We are at fault, but mostly them, if the whole place has mold issues, sometimes it is about how the building is made, if the walls have mold inside, then it must be redone. Ayrton also speaks about his experience with his second flat, he said, “In the second year now, everything has gone up in price, so it is hard to balance that as well.” </p>
     <br><br>
     <div class="centre">
-        <img src="images/fourth.jpeg" width="800">
+        <img src="images/fourth.jpeg">
         <br>
         <i class="small">51.06% of tenants have a mould issue, while 74.07% of homeowners have a mould issue. </i>   
     </div>
@@ -204,3 +204,4 @@
     <a href=https://wellcomecollection.org/articles/XJENpBAAAHUXJHC_> Part 2 https://wellcomecollection.org/articles/XJENpBAAAHUXJHC_</a>
 </body>
 </html>
+
